# catwatch

./: .env.example  .gitignore  CONTEXT_IDEAS.md  DEV.md  DEV_GUIDE.md  GUIDE.md  README.md  documentation.md  modal_deploy.py  package-lock.json  railway.json  requirements-local.txt  requirements.txt  test_siglip2.py
backend/: nlp.py  prompts.py  requirements.txt  supermemory_client.py  upload_weights.py  zone_config.py
backend/modal_app/: __init__.py  db.py  florence2.py  orchestrator.py  qwen_vl.py  siglip2.py  train_yolo.py  whisper.py  yolo_detector.py
data/: cat_spec_kb.json  seed_inspections.json  seed_parts.json  sub_section_prompts.json
data/797_dataset/: classes.json  data.yaml
data/component_dataset/: classes.json  data.yaml
docs/plans/: 2026-02-28-797-training-pipeline.md  2026-02-28-picam-integration-design.md
pi5/: capture.py  relay.py
scripts/: e2e_webcam_demo.py  get_trained_model.py  prepare_training_data.py  run_local_tests.py  seed_chroma.py  seed_from_catrack.py  seed_supermemory.py  upload_dataset.py  validate_zones.py  warmup.py
scripts/client/: audio.py  constants.py  detection.py  hud.py  session.py  ws_client.py
sdk/: README.md  pyproject.toml
sdk/catwatch/: __init__.py  client.py  defaults.py  protocol.py  quality.py  source.py
tests/: test_picam_capture.py  test_picam_relay.py
tests/training_factory/: conftest.py  test_augment.py  test_prepare_797.py
training-factory/: augment.py  prepare_797.py
web/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/lib/: auth.ts  (+5 more)
(+47 files in other folders)
