[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "catwatch"
version = "0.1.0"
description = "CatWatch drone inspection SDK"
requires-python = ">=3.9"
dependencies = ["opencv-python>=4.8", "websockets>=12.0", "numpy>=1.24"]

[project.optional-dependencies]
picamera = ["picamera2"]
