[tool.poetry]
name = "catwatch"
version = "0.2.1"
description = "AI Inspection SDK"
authors = ["CatWatch <hello@catwatch.dev>"]
readme = "README.md"
packages = [{include = "catwatch"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
opencv-python = ">=4.8"
websockets = ">=12.0"
numpy = ">=1.24"

[tool.poetry.extras]
picamera = ["picamera2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
